# claude_cli_agent

./: .env.example  .gitignore  ChatAnthropic_langchain.py  README.md  SETUP.md  USAGE.md  bug.md  cagent-usage-dashboard.html  calude_code.py  chat_anthropic.py  claude_agent_cli.py  cli_formatting.py  pyproject.toml  requirements.txt  run.sh  usage_meter.py
.cursor/rules/: version-bump-policy.mdc
src/claude_cli_agent/: __init__.py  __main__.py  annotations.py  approval_audit.py  approval_token.py  config.py  console_theme.py  graphify_integration.py  host_commands.py  host_tools.py  independent_agent.py  langchain_tool_loop.py  options_build.py  policy.py  project_permissions.py  prompt_completer.py  render.py  scaffolding.py  session.py  state_store.py  tui.py  usage_dashboard_html.py  usage_tracking.py  ux.py
src/claude_cli_agent/backends/: __init__.py  base.py  claude_code.py  copilot_sdk.py  independent.py  langchain_copilot.py  registry.py
src/claude_cli_agent/cli/: main.py
src/claude_cli_agent/legacy_scripts/: ChatAnthropic_langchain.py  __init__.py  calude_code.py  chat_anthropic.py  claude_agent_cli.py  cli_formatting.py
tests/: test_backends.py
