[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claude-cli-agent"
version = "0.2.28"
description = "Production-oriented coding agent CLI built on the Claude Agent SDK."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Claude CLI Agent contributors" }]
dependencies = [
  "claude-agent-sdk>=0.1.65",
  "anthropic>=0.51.0",
  "keyring>=25.0.0",
  "prompt-toolkit>=3.0.47",
  "typer>=0.12.3",
  "rich>=13.7.0",
  "textual>=0.86.0",
  "asciimatics>=1.15.0",
]

[project.optional-dependencies]
graphify = ["graphifyy>=0.4.0"]
dev = ["pytest>=8.0.0", "ruff>=0.6.0"]

[project.scripts]
cagent = "claude_cli_agent.cli.main:app_main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_cli_agent"]

[tool.hatch.build.targets.sdist]
include = ["src/claude_cli_agent", "README.md", "pyproject.toml", ".gitignore"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
